✨ feat(角色管理): 新增角色管理接口
